--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: About
 ---
 <div class="well">
     <p>
-      Sylvite is a <a href="https://github.com/awslabs/amazon-kinesis-client">Kinesis Client Library (KCL)</a> multi-lang deamon runner.  The multi-lang deamon allows
+      Sylvite is a <a href="https://github.com/awslabs/amazon-kinesis-client">Kinesis Client Library (KCL)</a> multi-lang daemon runner.  The multi-lang deamon allows
       non-Java code to process a Kinesis stream, while still benefiting from the checkpointing, resharding, load balancing and
       monitoring capabilities provided by the KCL.
     </p>
